<resources>
    <string name="app_name">Predict_alphabet</string>
<!--    <string name="Alphabet">Input the alphabet</string>-->
    <string name="input_the_alphabet">Input the alphabet</string>
    <string name="enter_a_z">Enter a-z</string>
    <string name="a_to_z">A to Z</string>
    <string name="grass">Grass</string>
    <string name="root">Root</string>
    <string name="sky">Sky</string>
    <string name="Check_btn">Check</string>
</resources>